--- a/images/style.css
+++ b/images/style.css
@@ -4,3 +4,14 @@
     box-sizing: border-box;
     font-family: "Overpass", sans-serif;
   }
+
+  :root {
+    --dark-blue: #262E38;
+    --light-grey: #969fad;
+    --medium-grey:#7C8798;
+    --orange: #FC7614;
+    --white:#FFF;
+    --very-dark-blue:#131518;
+    --black-gradient: radial-gradient(98.96% 98.96% at 50% 0%, #232A34 0%, #131E27 100%):
+
+  }
